--- a/LSOAMSOAWARDCategoryStats.ipynb
+++ b/LSOAMSOAWARDCategoryStats.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "city      = 'london'\n",
@@ -15,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,51 +118,73 @@
     "    all_cat_types = list(set(all_cats))\n",
     "    all_cat_freq  = Counter(all_cats)\n",
     "            \n",
-    "    return ward_cat, ward_subcat, all_cat_types, all_cat_freq\n",
+    "    return ward_cat, ward_subcat, all_cat_types, all_cat_freq, all_cats\n",
     "\n",
     "\n",
     "            \n",
-    "ward_cat, ward_subcat, all_cat_types, all_cat_freq = get_ward_categories(ward_venues, venues_cat, venues_subcat)\n",
+    "ward_cat, ward_subcat, all_cat_types, all_cat_freq, all_cats = get_ward_categories(ward_venues, venues_cat, venues_subcat)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'arts_entertainment': 3628,\n",
-       "         'building': 15585,\n",
-       "         'education': 1281,\n",
-       "         'event': 392,\n",
-       "         'food': 17730,\n",
-       "         'na': 1186,\n",
-       "         'nightlife': 4626,\n",
-       "         'parks_outdoors': 2676,\n",
-       "         'shops': 12401,\n",
-       "         'travel': 5003})"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "all_cat_freq"
+    "''' ADD THE  NUMBER OF USERS CENTROID WARD'''\n",
+    "def wards_user_centroids(outfolder):\n",
+    "    \n",
+    "    ward_users = {}\n",
+    "    \n",
+    "    #for line in open(outfolder + 'user_info/user_wards.dat'):\n",
+    "    \n",
+    "    for line in open(outfolder + 'user_info/user_wards.dat'):\n",
+    "        user, ward = line.strip().split('\\t')\n",
+    "        \n",
+    "        if ward not in ward_users:\n",
+    "            ward_users[ward] = [user]\n",
+    "        else:\n",
+    "            ward_users[ward].append(user)\n",
+    "\n",
+    "            \n",
+    "    ward_numc = {}\n",
+    "    \n",
+    "    for ward, users in ward_users.items():\n",
+    "        ward_numc[ward] = len(users)\n",
+    "        \n",
+    "    return ward_numc\n",
+    "        \n",
+    "ward_numcentr = wards_user_centroids(outfolder)        \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_ward_features(outfolder, ward_cat, ward_subcat, all_cat_types, all_cat_freq, ward_venues): \n",
+    "from scipy.stats import entropy\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def get_ward_features(outfolder, ward_cat, ward_subcat, all_cat_types, all_cat_freq, ward_venues, all_cats, ward_numcentr): \n",
     "\n",
     "    ward_cat_distr = {}\n",
     "\n",
@@ -170,6 +194,7 @@
     "    # for cat, num in all_cat_freq.items():\n",
     "    #     all_cat_prob[cat] = all_cat_freq[cat]/float(sum_cats)\n",
     "\n",
+    "    all_cats = list(set(all_cats))\n",
     "\n",
     "    entropies = []\n",
     "\n",
@@ -183,18 +208,20 @@
     "\n",
     "        # get the density of certain categories within wards\n",
     "        E = 0\n",
-    "\n",
+    "        Pijs = []\n",
     "        for ac in all_cats:\n",
     "            Pij = cats.count(ac) / float(num_of_venues)\n",
     "            ward_cat_distr[ward][ac] = cats.count(ac) / float(num_of_venues)\n",
-    "            if Pij != 0:\n",
-    "                E -= Pij * math.log(Pij) / math.log(len(all_cats))\n",
-    "\n",
-    "        ward_cat_distr[ward]['Entropy']    = E\n",
+    "            Pijs.append( Pij)\n",
+    "                \n",
+    "                \n",
+    "        ward_cat_distr[ward]['Entropy']    = entropy(Pijs, base = len(Pijs))\n",
     "        ward_cat_distr[ward]['Venues_num'] = num_of_venues\n",
     "\n",
     "\n",
     "    venues_ward_cat_stats = {}\n",
+    "        \n",
+    "\n",
     "        \n",
     "    for ind, (ward, venues) in enumerate(ward_venues.items()):\n",
     "        \n",
@@ -203,7 +230,8 @@
     "        for venue in venues:\n",
     "            venues_ward_cat_stats[venue] = ward_cat_distr[ward]\n",
     "            venues_ward_cat_stats[venue]['ward'] = ward\n",
-    "        \n",
+    "            venues_ward_cat_stats[venue]['user_centroids'] = ward_numcentr[ward]\n",
+    "\n",
     "        \n",
     "\n",
     "    df = pd.DataFrame.from_dict(venues_ward_cat_stats, orient = 'index')\n",
@@ -211,7 +239,21 @@
     "    \n",
     "    \n",
     "\n",
-    "get_ward_features(outfolder, ward_cat, ward_subcat, all_cat_types, all_cat_freq, ward_venues)"
+    "get_ward_features(outfolder, ward_cat, ward_subcat, all_cat_types, all_cat_freq, ward_venues, all_cats, ward_numcentr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = set(ward_venues.keys())\n",
+    "b = set(ward_numcentr.keys())\n",
+    "\n",
+    "        \n",
+    "for aa in ward_venues.keys():\n",
+    "    print ward_numcentr[aa]"
    ]
   },
   {
